kubernetes/booking-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: microservices-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: cs4067-assignment-02-22i-0849-minahil_ali-booking-service:latest
          ports:
            - containerPort: 5001
