kubernetes/event-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: microservices-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: cs4067-assignment-02-22i-0849-minahil_ali-event-service:latest
          ports:
            - containerPort: 5000
