kubernetes/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microservices-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: cs4067-assignment-02-22i-0849-minahil_ali-notification-service:latest
          ports:
            - containerPort: 5003
