kubernetes/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservices-namespace
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: microservices-namespace
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: microservices-namespace
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672 # AMQP port
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672 # Management UI port
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: microservices-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP


---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: microservices-namespace
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: microservices-namespace
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP


---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: microservices-namespace
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
